<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/tv_titulo_menuApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/caprasimo_regular"
        android:text="@string/menu_principal"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageView
        android:id="@+id/iv_logo_unab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/iv_logo_unab"
        android:src="@mipmap/img_unab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo_menuApp">

    </ImageView>

    <TextView
        android:id="@+id/tv_descripcion_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/roboto_italic_variablefont"
        android:lineSpacingMultiplier="1.5"
        android:padding="15dp"
        android:text="@string/tv_descripcion_menu"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_unab">

    </TextView>

    <Button
        android:id="@+id/btnAppSalud"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_appsalud"
        app:layout_constraintTop_toBottomOf="@+id/tv_descripcion_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="35dp"
        android:padding="15dp">

    </Button>

    <Button
        android:id="@+id/btnAppLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_appLoginDiseño"
        app:layout_constraintTop_toBottomOf="@+id/btnAppSalud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:padding="15dp">

    </Button>

    <Button
        android:id="@+id/btnFragment"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_appFragment"
        app:layout_constraintTop_toBottomOf="@+id/btnAppLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:padding="15dp">

    </Button>



    </androidx.constraintlayout.widget.ConstraintLayout>





