<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppSalud">

    <!-- Titulo App -->
    <TextView
        android:id="@+id/tv_titulo_appSalud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/titulo_AppSlaud"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <!-- Subtitulo App -->
    <TextView
        android:id="@+id/tv_subtitulo_appSalud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/sub_titulo_AppSlaud"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo_appSalud">

    </TextView>

    <!-- Btn_Menu -->
    <LinearLayout
        android:id="@+id/btn_perfiles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitulo_appSalud">

        <!-- Primer botón -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/et_corner_radious_app_salud"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/cardiogram_svgrepo_com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/btn_signos_vitales"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>

        <!-- Segundo botón -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/et_corner_radious_app_salud"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/heart_svgrepo_com"
                app:tint="@color/heart_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/btn_registar"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>

        <!-- Tercer botón -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/et_corner_radious_app_salud"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/clock_back_svgrepo_com"
                app:tint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/btn_historial"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>

        <!-- Cuarto botón -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/et_corner_radious_app_salud"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/profile_1336_svgrepo_com"
                app:tint="@color/profile_user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/btn_perfil"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>

    </LinearLayout>

    <!-- CardView Peso Actual -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_peso_actual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/et_corner_radious"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_perfiles">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/tv_titulo_cardview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_titulo_cardview_1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/weight_svgrepo_com"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/tv_peso"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="@id/tv_titulo_cardview1"
                app:layout_constraintTop_toBottomOf="@id/tv_titulo_cardview1" />

            <TextView
                android:id="@+id/tv_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/tv_date"
                android:textColor="@color/gray_light"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_peso"
                app:layout_constraintTop_toBottomOf="@id/tv_peso" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <!-- CardView Presion Arterial -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_presion_arterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/et_corner_radious"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_peso_actual">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/tv_titulo_cardview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_titulo_cardview_2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/heart_svgrepo_com"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/heart_red" />

            <TextView
                android:id="@+id/tv_presion_arterial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/tv_presion_arterial"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="@id/tv_titulo_cardview2"
                app:layout_constraintTop_toBottomOf="@id/tv_titulo_cardview2" />

            <TextView
                android:id="@+id/tv_fecha_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/tv_date"
                android:textColor="@color/gray_light"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_presion_arterial"
                app:layout_constraintTop_toBottomOf="@id/tv_presion_arterial" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <!-- CardView Ultimo Ejercicios -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/et_corner_radious"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_presion_arterial">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/tv_titulo_cardview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_titulo_cardview_3"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/cardiogram_svgrepo_com"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/blue" />

            <TextView
                android:id="@+id/tv_ejercicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/tv_ultimos_ejercicios"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="@id/tv_titulo_cardview3"
                app:layout_constraintTop_toBottomOf="@id/tv_titulo_cardview3" />

            <TextView
                android:id="@+id/tv_fecha_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/tv_date"
                android:textColor="@color/gray_light"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_ejercicio"
                app:layout_constraintTop_toBottomOf="@id/tv_ejercicio" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>